tests/paczka1/fuzzy1/99702050.err
Error in line 9: bN2E A597 83,3
Error in line 18: MtxuzEq4TSS A8Q2 55,8
Error in line 17: bN2E A251 77,6
Error in line 39: bN2E A597 51,9
